deps/v8/test/message/fail/paren_in_arg_string.out
undefined:1: SyntaxError: Arg string terminates parameters early
(function anonymous()
                    ^
SyntaxError: Arg string terminates parameters early
    at new Function (<anonymous>)
    at *%(basename)s:29:31
